# graalvm-example

java-client/: pom.xml
java-client/src/main/java/org/example/sensemon/adapter/: SampleFilter.java  SensorMonitor.java
java-client/src/main/java/org/example/sensemon/adapter/graalvm/: NativeSensorMonitor.java  NativeSensorsInterface.java  PythonSampleFilter.java
java-client/src/main/java/org/example/sensemon/adapter/jni/: JniSensorMonitor.java
java-client/src/main/java/org/example/sensemon/adapter/rest/: ResourceUtils.java  SensorMonitorController.java
java-client/src/main/java/org/example/sensemon/adapter/rest/dto/: DeviceInfoDto.java  FeatureInfoDto.java  SubFeatureInfoDto.java
java-client/src/main/java/org/example/sensemon/adapter/spring/: SpringMonitorTasks.java
java-client/src/main/java/org/example/sensemon/application/adapter/primary/rest/: ResourceUtils.java  SensorMonitorController.java
java-client/src/main/java/org/example/sensemon/application/adapter/secondary/: SensorMonitor.java
java-client/src/main/java/org/example/sensemon/application/adapter/secondary/graalvm/: NativeSensorMonitor.java  NativeSensorsInterface.java
java-client/src/main/java/org/example/sensemon/application/conversion/: DeviceInfoToDtoConverter.java  FeatureInfoToDtoConverter.java  SubFeatureInfoToDtoConverter.java
java-client/src/main/java/org/example/sensemon/application/model/: BusType.java  DeviceBus.java  DeviceInfo.java  FeatureInfo.java  FeatureType.java  SensorData.java  SensorReference.java  SubFeatureInfo.java  SubFeatureType.java
java-client/src/main/java/org/example/sensemon/application/service/: SensorMonitorService.java  SensorsService.java
java-client/src/main/java/org/example/sensemon/infrastructure/: Application.java  SensorInterfaceConfiguration.java  SensorMonitorConfiguration.java  SensorsInterfaceConfiguration.java  SettingsConfiguration.java
java-client/src/main/java/org/example/sensemon/infrastructure/settings/: MonitoringSettings.java
java-client/src/main/java/org/example/sensemon/infrastructure/settings/monitoring/: MonitoredDevice.java  MonitoredFeature.java  MonitoredSubFeature.java
java-client/src/main/native/: .gitignore  CMakeLists.txt  build.sh
java-client/src/main/native/include/: device_bus_wrapper.h  device_info_wrapper.h  feature_info_wrapper.h  jni_domain.h  jni_sensor.h  org_example_sensemon_application_adapter_secondary_jni_JniSensorMonitor.h  sensor_data_wrapper.h  sub_feature_info_wrapper.h
java-client/src/main/native/src/: device_bus_wrapper.cpp  device_info_wrapper.cpp  feature_info_wrapper.cpp  jni_domain.cpp  jni_sensor.cpp  jni_sensor.h  jni_sensor_monitor.cpp  sensor_data_wrapper.cpp  sub_feature_info_wrapper.cpp
java-client/src/main/resources/: application.yml  filter.py  logback-spring.xml
java-client/src/main/setup/: native-java-client.sh  reflection-config.json
sensor-monitor/: CMakeLists.txt  run-test.sh
sensor-monitor/include/: device.h  device_feature.h  device_subfeature.h  device_types.h  monitor.h  sensemon.h
sensor-monitor/src/: device.cpp  device_feature.cpp  device_subfeature.cpp  monitor.cpp  sensemon.cpp
sensor-monitor/test/: sensemon_test.cpp
(+6 files in other folders)
